# updates

./: .eslintrc  .eslintrc.yaml  .gitattributes  .gitignore  .ignore  .travis.yml  @pnpm-npm-conf.d.ts  COMPRESSION_VERIFICATION.md  Makefile  NPM_API_ANALYSIS.md  PERFORMANCE_ANALYSIS.md  README.md  api.ts  cli.ts  config.ts  eslint.config.ts  index.test.ts  index.ts  jest.config.js  package-lock.json  package.json  pnpm-lock.yaml  registryAuthToken.ts  rollup.config.js  shebang  test.js  test.json  tsconfig.json  tsdown.config.ts  types.d.ts  updates.config.js  updates.config.ts  updates.js  updates.test.js  utils.test.ts  utils.ts  vite.config.ts  vitest.config.js
.github/workflows/: ci.yaml  release.yaml
__snapshots__/: updates.test.js.snap
bench/: bench.ts  server.ts
fixtures/: pyproject.toml  test.json  updates.config.js
fixtures/cargo/: Cargo.toml  serde-versions.json
fixtures/cargo-workspace/: Cargo.toml
fixtures/go/: go.mod  (+2 more)
info/: @babel%2fpreset-env.json  prismjs.json  styled-components.json
modes/: act.ts  actions.test.ts  actions.ts  cargo.test.ts  cargo.ts  docker.test.ts  docker.ts  go.test.ts  go.ts  make.test.ts  make.ts  npm.test.ts  npm.ts  pypi.test.ts  pypi.ts  shared.test.ts  shared.ts
snapshots/: index.test.ts.snap  updates.test.js.snap
utils/: dns.ts  fetchCache.test.ts  fetchCache.ts  json5.test.ts  json5.ts  pmCooldown.test.ts  pmCooldown.ts  prewarm.test.ts  prewarm.ts  rc.test.ts  rc.ts  renovate.test.ts  renovate.ts  semver.test.ts  semver.ts  toml.test.ts  toml.ts  utils.test.ts  utils.ts  workspace.test.ts  workspace.ts
(+72 files in other folders)
